// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Rehook's identifyUser destination action: all fields 1`] = `
Object {
  "metadata": Object {
    "testType": "R(qF3CS",
  },
  "referral_code": "R(qF3CS",
  "source_id": "R(qF3CS",
}
`;

exports[`Testing snapshot for Rehook's identifyUser destination action: required fields 1`] = `
Object {
  "source_id": "R(qF3CS",
}
`;
